# Palletrone_sim

./: .gitignore  MUJOCO_LOG.TXT  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/palletrone_cmd/lib/palletrone_cmd/: position_cmd
install/palletrone_cmd/share/palletrone_cmd/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/palletrone_cmd/share/palletrone_cmd/cmake/: palletrone_cmdConfig.cmake
install/palletrone_controller/share/palletrone_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/palletrone_interfaces/share/palletrone_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/palletrone_interfaces/share/palletrone_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_palletrone_interfaces__rosidl_generator_cExport-noconfig.cmake  export_palletrone_interfaces__rosidl_generator_cExport.cmake  export_palletrone_interfaces__rosidl_generator_cppExport.cmake  (+15 more)
install/plant/lib/plant/: plant
install/plant/share/plant/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: MUJOCO_LOG.TXT
src/palletrone_cmd/: CMakeLists.txt
src/palletrone_cmd/launch/: arm_launch.py  pt_launch.py
src/palletrone_cmd/src/: attitude_sweep_cmd.cpp  position_cmd.cpp
src/palletrone_controller/: CMakeLists.txt
src/palletrone_controller/src/: allocator_controller.cpp  wrench_controller.cpp
src/palletrone_interfaces/: CMakeLists.txt  package.xml
src/palletrone_interfaces/msg/: ArmCmd.msg  AttitudeCmd.msg  Cmd.msg  Input.msg  Wrench.msg
src/plant/: package.xml  setup.py
src/plant/plant/: plant.py
src/plant/xml/: PROP.stl  Palletrone.xml  scene.xml
src/plant/xml/arm_assets/: 6prop.stl  LINK1_honebracket_540_under.stl  LINK2.stl  LINK3_xm430_to_Wrist.stl  MujocoLink2.stl  Wrist_Link.stl  XC_330_Parts.stl  XC_330_bracket.stl  XC_330_servo.stl  XL540.stl  XM,H-430_idler.stl  case_bearing.stl
(+57 files in other folders)
